# StyleRes

./: .gitignore  Makefile  app.py  dataset_tools.py  inference.py  inference.sh  pyproject.toml  utils.py
datasets/: inference_dataset.py  process_image.py
editings/: editor.py  ganspace.py  gradctrl.py  interfacegan.py  styleclip.py
editings/gradctrl_manipulator/: classifiers.py  manipulate.py
editings/styleclip_directions/: styleclip_global_calculator.py  styleclip_mapper_network.py
environments/: Dockerfile
environments/gpu/: docker-compose.yaml
evaluation/fid/: data_loader.py  fid.py
evaluation/id/: calc_id_loss_parallel.py
evaluation/id/configs/: paths_config.py
evaluation/id/encoders/: helpers.py  model_irse.py
evaluation/id/mtcnn/: mtcnn.py
evaluation/id/mtcnn/mtcnn_pytorch/src/: align_trans.py  box_utils.py  detector.py  first_stage.py  get_nets.py  matlab_cp2tform.py  visualization_utils.py
evaluation/recons_metrics/: recons.py
evaluation/recons_metrics/criteria/: ms_ssim.py
evaluation/recons_metrics/criteria/lpips/: lpips.py  networks.py
models/: e4e.py  stylegan2.py  styleres.py
models/dnnlib/: util.py
models/torch_utils/: custom_ops.py  misc.py
models/torch_utils/ops/: bias_act.py  filtered_lrelu.py
options/: Settings.py  inference_options.py
options/editing_options/: template.py
