[tool.poetry]
name = "style-res"
version = "0.1.0"
description = ""
authors = ["Hina39 <hiinyan3939@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp38-cp38-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu116/torchvision-0.13.1%2Bcu116-cp38-cp38-linux_x86_64.whl" }
ninja = "^1.11.1.1"
numpy = "<=1.26.2"
scipy = "<=1.11.3"
opencv-python = "^4.8.1.78"
pillow = "^10.1.0"
scikit-image = "<=0.22.0"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
clip = {git = "https://github.com/openai/CLIP.git"}
dlib = "^19.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
